# program

./: README.md  batch_rename.py  batch_replace.py  main.py  multiprocessing-sample.py
bash/: awk.sh  if.sh  input.sh  loop_simple.sh  num_operation.sh
cpp/: SplitString.cpp  args_input.cpp  define.c  fs_readfile_getline.cpp  handle_txt.cpp  ifdef.h  open_imshow.cpp  pointer.cpp  test_appsrc.cpp  top_k.c  top_k.cpp  write_read_file.cpp
cpp/circle_buffer/: main.cpp
cpp/cv/: bgr2yuv.cpp  capture_from_camera.cpp  download_build_install_opencv.sh  open_imshow.cpp  rotate.cpp
cpp/dl/: convert_siamese_data_bj.cpp
cpp/linux/: list_files.cpp  make.inc  write_v4l2.c
cpp/mydb/: myDataBase.c  myDataBase.h  readme.md  test.c
cpp/ring_buffer/: CMakeLists.txt  readme.md  ring_buffer.cpp  ring_buffer.h  test.cpp
cpp/sqlite3/: CMakeLists.txt  create_db.sql  create_db.txt  readme.txt  sqlite_db.cpp  sqlite_db.h  sqlite_handle.c  test.cpp
python/: gis_common.py  main.py  push_mail.py
python/BTC_price_monitor/: get_price.py  main.py
python/Thread/: sample.py
python/cv/: cam_property.py  common.py  ipcam.py  jpg2bmp.py  roi.py
python/dl/: Image_precessing.py  binaryproto2npy.py  caffe_copy.py  caffe_init.py  caffe_print_shape.py  classification.py  createTrainAndTest.py  createTrainAndTest_xml.py  feature_extraction.py  gen_densenet121_ssd1.py  gen_mobilefacenet.py  gen_mobilenetv2_ssd_model.py  gen_model.py  num_output_half_double.py  random_trainval.py  voc2007_bai.py
python/xml/: 1.xml  (+9 more)
pytorch/: Classify_On_CIFAR10.ipynb
xml/: xml2txt.py  xml_read_test.py
(+63 files in other folders)
